// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search utils searchByQueries returns the result set based on querys 1`] = `
Array [
  Object {
    "matchData": Object {
      "metadata": Object {},
    },
    "ref": "undefined",
    "score": 0,
  },
]
`;

exports[`search utils searchByQueries returns the result set based on querys 2`] = `
Array [
  Object {
    "matchData": Object {
      "metadata": Object {
        "on": Object {
          "foo": Object {},
        },
      },
    },
    "ref": "undefined",
    "score": 0,
  },
]
`;

exports[`search utils searchByQueries returns the result set based on querys 3`] = `
Array [
  Object {
    "matchData": Object {
      "metadata": Object {
        "two": Object {
          "foo": Object {},
        },
      },
    },
    "ref": "undefined",
    "score": 0.693,
  },
]
`;
